--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -79,24 +79,24 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <th scope="row">Avg. No. of Customers in System</th>
+                    <th scope="row">Avg. No. of Customers in the System</th>
                     <td id="th_cs"></td>
                     <td id="ex_cs"></td>
                   </tr>
                   <tr>
-                    <th scope="row">Avg. No. of Customers in Queue</th>
+                    <th scope="row">Avg. No. of Customers in the Queue</th>
                     <td id="th_cq"></td>
                     <td id="ex_cq"></td>
                   </tr>
                   <tr>
-                    <th scope="row">Avg. Time Spent in System</th>
+                    <th scope="row">Avg. Time Spent in the System</th>
                     <td id="th_ts"></td>
                     <td id="ex_ts"></td>
                   </tr>
                   <tr>
-                    <th scope="row">Avg. Service Time</th>
-                    <td id="th_st"></td>
-                    <td id="ex_st"></td>
+                    <th scope="row">Avg. Time Spent in the Queue</th>
+                    <td id="th_qt"></td>
+                    <td id="ex_qt"></td>
                   </tr>
                 </tbody>
               </table>
